# nodebuilder

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: FindCairo.cmake
src/: CMakeLists.txt  blockmap.cpp  blockmap.hpp  box.hpp  bsp.cpp  bsp.hpp  color.hpp  common.hpp  line.hpp  main.cpp  map.cpp  map.hpp  node.cpp  node.hpp  point.hpp  polygon.hpp  renderer.cpp  renderer.hpp  seg.hpp  splitter.cpp  splitter.hpp  vec.hpp  wad.cpp  wad.hpp
tests/: CMakeLists.txt  box_test.cpp  color_test.cpp  common_test.cpp  line_test.cpp  polygon_test.cpp  seg_test.cpp  vec_test.cpp
